syntax = "proto3";
package vpn;

message IPPacket {
    message Raw {
        bytes raw = 1; // raw packet
    }

    message Vpn {
        bytes vpn_assigned_ip =  1; // vpn  assigned ip
        bytes vpn_gateway = 2; // vpn gateway
        bytes vpn_subnet_ip = 3; // vpn subnet ip
        bytes vpn_subnet_mask = 4; // vpn subnet mask
    }

    ErrorCode error_code = 1; // error code
    IPPacketType packet_type = 2; // packet type

    Raw packet1 = 10; // raw packet
    Vpn packet2 = 11; // vpn packet
}

message AuthRequest {
    message GoogleOpenID {
        string code = 1;
    }
    message AwsIam {
        string access_key = 1;
        string secret_access_key = 2;
    }

    AuthType auth_type = 1; // auth type
    GoogleOpenID google_open_id = 2; // support google openid connect
    AwsIam aws_iam = 3;  // support aws iam
}

message AuthResponse {
    ErrorCode error_code = 1; // error code

    string jwt = 2; // jwt
}

enum AuthType {
    AT_NONE = 0; // unknown
    AT_TEST = 1;  // test
    AT_GOOGLE_OPEN_ID = 2; // google open id
    AT_AWS_IAM = 3; // aws iam
}

enum ErrorCode {
    EC_UNKNOWN = 0;
    EC_SUCCESS = 1;
    EC_INVALID_AUTHORIZATION = 2;
    EC_EXPIRED_JWT = 3;
}

enum IPPacketType {
    IPPT_UNKNOWN = 0;
    IPPT_RAW = 1;
    IPPT_VPN_ASSIGN = 2;
}
